unpackaged/main/default/objects/orders__x/orders__x.object-meta.xml
<CustomObject>
    <description>orders</description>
    <externalDataSource>P21Orders_Integration</externalDataSource>
    <externalName>orders</externalName>
    <label>orders</label>
    <pluralLabel>orders</pluralLabel>
</CustomObject>