unpackaged/main/default/objects/orders__x/fields/OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OrderNo__c</fullName>
    <description>OrderNo</description>
    <externalDeveloperName>OrderNo</externalDeveloperName>
    <label>OrderNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>