unpackaged/main/default/objects/orders__x/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <description>OrderStatus</description>
    <externalDeveloperName>OrderStatus</externalDeveloperName>
    <label>OrderStatus</label>
    <length>15</length>
    <type>Text</type>
</CustomField>