unpackaged/main/default/objects/orders__x/fields/PoNo__c.field-meta.xml
<CustomField>
    <fullName>PoNo__c</fullName>
    <description>PoNo</description>
    <externalDeveloperName>PoNo</externalDeveloperName>
    <label>PoNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>